RESOLVED FIXED 76867
nesting horizontal flexboxes is broken
https://bugs.webkit.org/show_bug.cgi?id=76867
Summary nesting horizontal flexboxes is broken
Tony Chang
Reported 2012-01-23 15:10:45 PST
Test case in the URL. The text in the inner flexbox is overflowing, but it shouldn't.
Attachments
Patch (18.84 KB, patch)
2012-02-09 16:11 PST, Ojan Vafai
hyatt: review+
Tony Chang
Comment 1 2012-01-27 15:25:59 PST
This is because we need to implement computePreferredLogicalWidths(). Without it, we fall back on RenderBlock::computePreferredLogicalWidths which doesn't know about horizontal layout.
Ojan Vafai
Comment 2 2012-01-27 16:03:22 PST
We also break when floating the flexbox itself: <div style="border:1px solid blue;display:-webkit-flexbox;float:left"><div>foo</div><div>barbaz</div></div> Would be good for the fix to this to have a testcase for float as well.
Ojan Vafai
Comment 3 2012-02-09 16:11:51 PST
Dave Hyatt
Comment 4 2012-02-13 13:16:13 PST
Comment on attachment 126398 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=126398&action=review r=me, with the rename suggestion for the static method below. > Source/WebCore/rendering/RenderFlexibleBox.cpp:159 > +static LayoutUnit marginWidthForChild(RenderBox* child, RenderStyle* parentStyle) Should be marginLogicalWidthForChild.
Ojan Vafai
Comment 5 2012-02-13 15:38:05 PST
Note You need to log in before you can comment on or make changes to this bug.