nesting horizontal flexboxes is broken https://bugs.webkit.org/show_bug.cgi?id=76867

Reviewed by David Hyatt.

Source/WebCore:

This is copied from RenderDeprecatedFlexibleBox and updated
for RenderFlexibleBox and to handle vertical writing mode.

Tests: css3/flexbox/preferred-widths-orthogonal.html
       css3/flexbox/preferred-widths.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::computePreferredLogicalWidths):
* rendering/RenderFlexibleBox.cpp:
(WebCore::marginWidthForChild):
(WebCore):
(WebCore::RenderFlexibleBox::computePreferredLogicalWidths):
* rendering/RenderFlexibleBox.h:
(RenderFlexibleBox):

LayoutTests:

* css3/flexbox/floated-flexbox-expected.txt:
* css3/flexbox/line-wrapping.html:
The old results here were wrong because they wrapped the contents of each flex item.

* css3/flexbox/preferred-widths-expected.txt: Added.
* css3/flexbox/preferred-widths-orthogonal-expected.txt: Added.
* css3/flexbox/preferred-widths-orthogonal.html: Added.
* css3/flexbox/preferred-widths.html: Added.

Canonical link: https://commits.webkit.org/95479@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107624 268f45cc-cd09-0410-ab3c-d52691b4dbfc